[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Emmmomi <kgrowth12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
numpy = "^2.1.1"
pulp = "^2.9.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
